<resources>
    <string name="app_name">kuSaku</string>
    <string name="title_home">Home</string>
    <string name="title_transaction">Transaction</string>
    <string name="title_report">Report</string>
    <string name="title_profile">Profile</string>
    <string name="welcome">Welcome</string>
    <string name="sub_tittle_login">Please sign in to continue</string>
    <string name="sign_in">SIGN IN</string>
    <string name="button_sign_in">Sign In</string>
    <string name="button_sign_up">Sign Up</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirmation_password">Confirmation Password</string>
    <string name="dont_have_account">Don\'t have an account? Sign Up</string>
    <string name="got_an_account">Got an account? Sign In</string>
    <string name="email_validation">Your email is invalid!</string>
    <string name="password_length">Password must not be less than 8 characters</string>
    <string name="required_field">Field cannot be empty!</string>
    <string name="sub_title_register">Please sign up to continue</string>
    <string name="profile">Profile</string>
    <string name="username">Username</string>
    <string name="income">Income</string>
    <string name="gender">Gender</string>
    <string name="log_out">Log out</string>
    <string name="add">Add</string>
    <string name="nominal">Nominal</string>
    <string name="add_expense">Add Expense</string>
    <string name="description">Description</string>
    <string name="sign_up">SIGN UP</string>
    <string name="expense_history">Expense History</string>
    <string name="advices">Advices</string>
    <string name="category">Category</string>
    <string name="date">Date</string>
    <string name="amount">Amount</string>
    <string name="salary_income">Salary / Income</string>
    <string name="total_expense">Total expense</string>
    <string name="monthly_report">Monthly Report</string>
    <string name="monthly_income">Monthly Income</string>
    <string name="name">Name</string>
    <string name="passwords_dont_match">"Passwords don't match"</string>
    <string name="select_date">Select Date</string>
    <string name="select_category">Select Category</string>
    <string name="use_ai">✨ Use AI</string>
    <string name="greetings">Hello, </string>
    <string name="no_data_available">No data available</string>
</resources>