<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingHorizontal="15dp"
    android:background="@color/teal_700">

    <!-- Title -->
    <TextView
        android:id="@+id/tv_add_expense_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/add_expense"
        android:textColor="@android:color/white"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- Form Add Expense -->
    <androidx.cardview.widget.CardView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="24dp"
        app:cardCornerRadius="16dp"
        app:cardElevation="8dp"
        app:layout_constraintTop_toBottomOf="@id/tv_add_expense_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <!-- Nominal Input -->
            <TextView
                android:id="@+id/tv_nominal"
                style="@style/SmallText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/activity_horizontal_margin"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:text="@string/nominal"
                android:textColor="@color/teal_700" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tl_nominal"
                style="@style/TextInputLayoutStyle"
                android:layout_marginStart="@dimen/activity_horizontal_margin"
                android:layout_marginEnd="@dimen/activity_horizontal_margin"
                android:layout_marginBottom="@dimen/activity_vertical_margin" >

                <com.capstone.kusaku.ui.main.MyEditText
                    android:id="@+id/edt_nominal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingVertical="10dp"
                    android:inputType="number"
                    android:background="@drawable/bg_edt_default"
                    tools:ignore="SpeakableTextPresentCheck" />
            </com.google.android.material.textfield.TextInputLayout>

            <!-- Description Input -->
            <TextView
                android:id="@+id/tv_description"
                style="@style/SmallText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/activity_horizontal_margin"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:text="@string/description"
                android:textColor="@color/teal_700" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tl_description"
                style="@style/TextInputLayoutStyle"
                android:layout_marginStart="@dimen/activity_horizontal_margin"
                android:layout_marginEnd="@dimen/activity_horizontal_margin"
                android:layout_marginBottom="@dimen/activity_vertical_margin" >

                <com.capstone.kusaku.ui.main.MyEditText
                    android:id="@+id/edt_description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textMultiLine"
                    android:maxLines="5"
                    android:paddingVertical="10dp"
                    android:background="@drawable/bg_edt_default"
                    tools:ignore="SpeakableTextPresentCheck" />
            </com.google.android.material.textfield.TextInputLayout>

            <!-- Dropdown Category -->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tl_category"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/select_category"
                android:layout_marginStart="@dimen/activity_horizontal_margin"
                android:layout_marginEnd="@dimen/activity_horizontal_margin"
                android:layout_marginBottom="5dp">

                <AutoCompleteTextView
                    android:id="@+id/dropdown_category"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="none"
                    android:paddingVertical="10dp" />
            </com.google.android.material.textfield.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/activity_horizontal_margin"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:layout_marginEnd="@dimen/activity_vertical_margin"
                android:layout_marginBottom="@dimen/activity_vertical_margin"
                android:orientation="horizontal">

                <!-- Use AI Button-->
                <Button
                    android:id="@+id/btn_use_ai"
                    style="@style/SmallText"
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:text="@string/use_ai"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:textStyle="bold" />

                <View
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_weight="1"/>

                <!-- Select Date Button -->
                <Button
                    android:id="@+id/btn_date_picker"
                    style="@style/SmallText"
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:text="@string/select_date"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:textStyle="bold"
                    android:layout_marginStart="@dimen/activity_horizontal_margin2"/>
            </LinearLayout>

            <!-- Add Button -->
            <Button
                android:layout_marginTop="30dp"
                android:id="@+id/btn_add"
                android:layout_width="match_parent"
                android:layout_height="54dp"
                android:text="@string/add"
                style="@style/SubTitleText"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:textAllCaps="false"
                app:cornerRadius="20dp"
                android:textSize="18sp"
                android:layout_marginStart="@dimen/activity_horizontal_margin"
                android:layout_marginEnd="@dimen/activity_horizontal_margin"/>
        </LinearLayout>
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>